<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TableLayout
        android:id="@+id/contentEr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="GoBack"
                android:text="@string/goback" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Save"
                android:text="@string/save" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_lable_name" />

            <EditText
                android:id="@+id/newtaskname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_lable_name" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_lable_desc" />

            <EditText
                android:id="@+id/newtaskdesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_lable_desc" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_lable_ttype" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ttype" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_lable_isweek" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:id="@+id/showdate" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_lable_date" />

            <EditText
                android:id="@+id/tdatetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_lable_date" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="GoBack"
                android:text="@string/goback" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Save"
                android:text="@string/save" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/myDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Picked"
            android:text="@string/finish" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>