<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cornerbg"
    android:orientation="vertical"   >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_alignRight="@+id/description"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:singleLine="true"
         android:gravity="center"
        android:text="@string/task_lable_title"
        android:textSize="20sp" android:textColor="#818181"  />

    <ImageView
        android:id="@+id/mubiao"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/name"
        android:background="@drawable/cornerwithnumber"
        android:contentDescription="@string/task_lable_name"
        android:gravity="center"
        android:src="@drawable/ticnowithnumber" />

    <ImageView
        android:id="@+id/jiantou"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/name"
        android:background="@drawable/corner"
        android:contentDescription="@string/task_lable_name"
        android:src="@drawable/tic01" />

    <TextView
        android:id="@+id/tpercent"
        android:layout_width="60dp"
        android:layout_height="55dp"

        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom|center"
        android:singleLine="true"
        android:text="@string/TextView_0" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mubiao"
        android:layout_alignBottom="@+id/mubiao"
        android:layout_toLeftOf="@+id/mubiao"
        android:layout_toRightOf="@+id/jiantou"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:text="@string/task_lable_desc"
        android:textColor="#818181"
        android:textSize="14sp" />
  <TextView
        android:id="@+id/tid"
        android:layout_width="60dp"
        android:layout_height="55dp"
 android:visibility="gone" 
        android:text="@string/TextView_0" />
    
</RelativeLayout>